# worms_remake

./: README.md
worms/: CMakeLists.txt  ProtocoloWorms.md  README.md  WorldVsSDL  installer.sh
worms/Box2D/include/box2d/: b2_world.h
worms/Box2D/src/collision/: b2_collision.cpp
worms/client/include/: ClientManager.h  EventSender.h  GameClient.h  StartWindow.h  camara.h  client_juego.h  client_receiver.h  createGameWindow.h  joinGameWindow.h  mainWindow.h  menuWindow.h
worms/client/include/engine/entities/: TexturePaths.h
worms/client/include/engine/graphics/: Animation.h  Texture.h
worms/client/src/: ClientManager.cpp  EventSender.cpp  GameClient.cpp  StartWindow.cpp  camara.cpp  client_juego.cpp  client_receiver.cpp  createGameWindow.cpp  joinGameWindow.cpp  main.cpp  mainWindow.cpp  menuWindow.cpp
worms/client/src/engine/graphics/: Animation.cpp  Texture.cpp
worms/common_libs/include/: ParseMapFromFile.h  ProtectedQueue.h  Protocol.h  Thread.h
worms/common_libs/include/exceptions/: UnExpectedException.h
worms/common_libs/include/messages/server/: GameActionEnum.h  GameInfo.h  GameUpdate.h  InitGameEnum.h
worms/common_libs/include/messages/sprites/: SpritesEnum.h
worms/common_libs/include/messages/user_actions/: ActionType.h  ToolID.h  UserAction.h  WeaponID.h
worms/common_libs/include/resources/: GrdEnum.h
worms/common_libs/include/utils/: WorldScale.h
worms/common_libs/src/: ParseMapFromFile.cpp  Protocol.cpp  liberror.cpp  resolver.cpp  resolvererror.cpp  socket.cpp
worms/common_libs/src/messages/server/: GameInfo.cpp  GameUpdate.cpp
worms/common_libs/src/messages/user_actions/: UserAction.cpp
worms/common_libs/src/utils/: WorldScale.cpp
worms/editor/include/: backgroundItem.h  dragAndDrop.h  mapEditor.h
worms/editor/src/: backgroundItem.cpp  dragAndDrop.cpp  main.cpp  mapEditor.cpp
worms/maps/: Mapa 1.txt  Mapa 2.txt  Mapa 3.txt
worms/server/include/: Client.h  ClientSender.h  Game.h  MatchesMonitor.h  Server.h  TurnHandler.h
worms/server/include/world/: GameWorld.h
worms/server/include/world/entities/: EntitiesType.h  WBeam.h  WDeadWorm.h  WEntity.h  WProyectile.h  WWater.h  WWorm.h
worms/server/src/: Client.cpp  ClientSender.cpp  Game.cpp  MatchesMonitor.cpp  Server.cpp  TurnHandler.cpp  main.cpp
worms/server/src/world/: GameWorld.cpp
(+80 files in other folders)
